--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ margin-top: 21px;
     width: 390px;
     height: 407px;
     float: left;
+    position: relative;
 }
 .grap-box1{
     width: 170px;
@@ -145,7 +146,7 @@ margin-top: 21px;
     margin-left: 22px;
     margin-top: 48px;
 }
-.grap-text{
+.hello{
     font-size: 17px;
     font-weight: bold;
     margin-left: 18px;
@@ -162,7 +163,7 @@ padding-top: 17px;
     border-radius: 8px;
     margin-top: 30px;
   }
-.button{
+.more-info{
     font-size: 9px;
     font-weight: bold;
     margin-left: 18px;
@@ -170,6 +171,7 @@ padding-top: 17px;
     margin-top: 15px;
     color: #262424d4;
     border: none;
+    cursor: pointer;
     background-color: white;
 }
 .unde{
@@ -196,15 +198,8 @@ padding-top: 17px;
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 22px;
-    margin-top: 48px;
-    
+    margin-top: 48px;   
 }
-/*.we-desi-icon i{
-    color: #3ee0d7;
-    margin-left: 22px;
-    margin-top: 48px;
-}*/
-
 .we-desi-text{
     font-size: 17px;
     font-weight: bold;
@@ -213,16 +208,7 @@ padding-top: 17px;
     padding-top: 17px;
     letter-spacing: 0.2px;
 }
-.we-desi-butt{
-    font-size: 9px;
-    font-weight: bold;
-    margin-left: 18px;
-    letter-spacing: 0.5px;
-    margin-top: 15px;
-    color: #262424d4;
-    border: none;
-    background-color: white; 
-}
+
 .web-unde{
     width: 29px;
     height: 0.1px;
@@ -258,16 +244,7 @@ padding-top: 17px;
     padding-top: 17px;
     letter-spacing: 0.2px;   
 }
-.soft-butt{
-    font-size: 9px;
-    font-weight: bold;
-    margin-left: 18px;
-    letter-spacing: 0.5px;
-    margin-top: 15px;
-    color: #262424d4;
-    border: none;
-    background-color: white;
-}
+
 .soft-unde{
     width: 29px;
     height: 0.1px;
@@ -302,16 +279,7 @@ i{
     padding-top: 17px;
     letter-spacing: 0.2px; 
 }
-.appl-box4-butt{
-    font-size: 9px;
-    font-weight: bold;
-    margin-left: 18px;
-    letter-spacing: 0.5px;
-    margin-top: 15px;
-    color: #262424d4;
-    border: none;
-    background-color: white;
-}
+
 .appl-unde{
     width: 29px;
     height: 0.1px;
@@ -319,5 +287,39 @@ i{
     margin-top: 1px;
     margin-left: 18px;
     text-decoration-line: underline;      
+}
+.more-info-col{
+    width: 95%;
+    height: 350px;
+    float: left;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    display: none;
+}
+.more-info-data{
+    padding: 32px;
+    width: 100%;
+    height: 407px;
+    background-color: white;
+    margin: 0 auto;
+}
+.graphic-text{
+    font-size: 23px;
+    color: black;
+    font-weight: 500;
+}
+.des-text{
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+    margin-top: 20px;
+    text-align: justify;
+}
+.close{
+    position: absolute;
+    right: 16px;
+    top: 25px;
+    font-size: 30px;
+    cursor: pointer;
 }
 
